# CppGraphics

./: .gitignore  CMakeLists.txt  Makefile  README.md  virTest.cpp
TEXTWTF/: main.cpp  shader.h
inc/: Camera.h  Component.h  CoreData.h  Cube.h  CubeScript.h  GameObject.h  Input.h  LightSource.h  Material.h  Quaternion.h  Renderer.h  Shader.h  Text.h  Texture.h  Transform.h  character.h  colors.h  process_input.h
inc/glad/: glad.h
inc/glad/include/glad/: glad.h
inc/glad/src/: glad.c
scripts/inc/: ChunkBehavior.h  ChunkLoader.h  CubeScript.h  PlayerMovement.h
scripts/sources/: ChunkBehavior.cpp  ChunkLoader.cpp  CubeScript.cpp  PlayerMovement.cpp
shaders/: TextFragment.shader  TextVertex.shader  fragment_shader.shader  vertex_shader.shader
sources/: Camera.cpp  Component.cpp  CoreData.cpp  Cube.cpp  GameObject.cpp  Input.cpp  LightSource.cpp  Material.cpp  Quaternion.cpp  Renderer.cpp  Shader.cpp  Text.cpp  Texture.cpp  Transform.cpp  camera.cpp  camera.h  core_data.cpp  core_data.h  fragmentShader.h  glad.c  input.cpp  input.h  main.cpp  process_input.cpp  process_input.h  shader.cpp  shader.h  transform.cpp  transform.h  vertexShader.h
sources/quaternion/: quaternion.cpp  quaternion.h
sources/shaders/: fragment_shader.shader  vertex_shader.shader
textures/: GrassBlock.png.pxo
